# NEW_ARB-

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS.md  VALIDATION_QUICKSTART.md  jest.config.js  package-lock.json  package.json
.github/workflows/: integration-audit.yml
contracts/: README.md
contracts/hooks/: ArbitrageHook.sol  BaseHook.sol
contracts/interfaces/: IERC20Extended.sol  IVault.sol
docs/: ARCHITECTURE.md  DEPLOYMENT.md  E2E_VALIDATION.md  INTEGRATION_AUDIT.md  PROJECT_STRUCTURE.md  QA_GUIDE.md
python/: main.py  requirements.txt
rust/src/: lib.rs
scripts/: README.md  audit-integration.sh  install-and-run.bat  install-and-run.sh  performance-benchmark.sh  pre-commit-check.sh  quick-test.sh  train-ml-models.py  validate-all.bat  validate-all.sh  validate-e2e.sh
src/: index.ts  validate-e2e.integration.test.ts  validate-e2e.ts
src/config/: config.ts
src/services/: broadcaster.ts  mevProtection.ts  mlClient.ts  scanner.ts  transactionBuilder.ts
src/utils/: gasOptimizer.ts  logger.ts  types.ts
